fix: Fixed the item-type from overflowing in bulk-edit

--- a/src/app/modals/bulk-edit-modal/bulk-edit-modal.component.scss
+++ b/src/app/modals/bulk-edit-modal/bulk-edit-modal.component.scss
@@ -25,3 +25,7 @@ table {
     border: 1px solid #eaedf1;
   }
 }
+
+.item-type {
+  display: inline-block;
+}
